--- a/html/css/style.css
+++ b/html/css/style.css
@@ -30,6 +30,12 @@
     margin-left: var(--sidebar-width);
 }
 
+.settings-button {
+    width: 50px;
+    height: 50px;
+    margin-left: auto;
+}
+
 .sidebar-container {
     width: var(--sidebar-width); /* 원하는 너비 */
     padding: 10px;
@@ -51,6 +57,7 @@
 }
 
 .header-container {
+    height: 100px;
     background-color: var(--color-background-secondary);
     padding: 1rem 1.5rem;
     border-radius: 12px;
@@ -435,6 +442,9 @@
 }
 
 .close-button {
+    margin-left: auto;
+    width: 50px;
+    height: 50px;
     padding: 5px 10px;
     cursor: pointer;
     background: none;
